test/expected/declare_fvx_v.out
declare f as function (x as void) returning void
                       ^
24: error: "void" parameters can not have a name
